[package]
name = "statix"
version = "0.1.0"
authors = ["Nick Senger <nicholas.senger@synthego.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-web = "2.0.0"
actix-rt = "1.1.0"
env_logger = "0.7.1"
structopt = "0.3"
