[package]
name = "statix"
version = "0.1.0"
authors = ["Nick Senger <nicholas.senger@synthego.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = { version = "4.3", default-features = false, features = ["macros", "compress-brotli", "compress-zstd", "cookies"] }
env_logger = "0.7.1"
structopt = "0.3"
